--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,10 +35,13 @@ jobs:
           pip install mkdocs-material
       
       - name: Build documentation
-        run: mkdocs build
+        run: |
+          mkdocs build --site-dir ./site
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        with:
+          enablement: true
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
