--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: AI Classification Standard
 site_description: An open framework for classifying and evaluating artificial intelligence systems
 site_author: AICS Community
-repo_url: https://github.com/4humai/aics
-repo_name: 4humai/aics
+repo_url: https://github.com/4hum-ai/aics
+repo_name: Github
 site_url: https://4hum-ai.github.io/aics/
 use_directory_urls: true
 nav:
